--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         border-radius: 50%;
         border: 3px solid transparent;
         /* COLOR 1 */
-        border-top-color: #FFF;
+        border-top-color: #fff;
         -webkit-animation: spin 2s linear infinite;
         /* Chrome, Opera 15+, Safari 5+ */
         -ms-animation: spin 2s linear infinite;
@@ -47,7 +47,7 @@
       }
 
       #loader:before {
-        content: "";
+        content: '';
         position: absolute;
         top: 5px;
         left: 5px;
@@ -56,7 +56,7 @@
         border-radius: 50%;
         border: 3px solid transparent;
         /* COLOR 2 */
-        border-top-color: #FFF;
+        border-top-color: #fff;
         -webkit-animation: spin 3s linear infinite;
         /* Chrome, Opera 15+, Safari 5+ */
         -moz-animation: spin 3s linear infinite;
@@ -70,7 +70,7 @@
       }
 
       #loader:after {
-        content: "";
+        content: '';
         position: absolute;
         top: 15px;
         left: 15px;
@@ -78,7 +78,7 @@
         bottom: 15px;
         border-radius: 50%;
         border: 3px solid transparent;
-        border-top-color: #FFF;
+        border-top-color: #fff;
         /* COLOR 3 */
         -moz-animation: spin 1.5s linear infinite;
         /* Chrome, Opera 15+, Safari 5+ */
@@ -164,8 +164,8 @@
         /* IE 9 */
         transform: translateX(-100%);
         /* Firefox 16+, IE 10+, Opera */
-        -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-        transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+        -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+        transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
       }
 
       .loaded #loader-wrapper .loader-section.section-right {
@@ -175,8 +175,8 @@
         /* IE 9 */
         transform: translateX(100%);
         /* Firefox 16+, IE 10+, Opera */
-        -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-        transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+        -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+        transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
       }
 
       .loaded #loader {
@@ -199,7 +199,7 @@
 
       #loader-wrapper .load_title {
         font-family: 'Open Sans';
-        color: #FFF;
+        color: #fff;
         font-size: 14px;
         width: 100%;
         text-align: center;
@@ -214,7 +214,7 @@
         font-weight: normal;
         font-style: italic;
         font-size: 14px;
-        color: #FFF;
+        color: #fff;
         opacity: 0.5;
       }
     </style>
@@ -231,10 +231,10 @@
     <script type="module" src="/src/main.ts"></script>
     <script>
       var _hmt = _hmt || [];
-      (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?ad5a868b3c6608e3580f2f7e4d76d66d";
-        var s = document.getElementsByTagName("script")[0];
+      (function () {
+        var hm = document.createElement('script');
+        hm.src = 'https://hm.baidu.com/hm.js?ad5a868b3c6608e3580f2f7e4d76d66d';
+        var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(hm, s);
       })();
     </script>
