--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vue3-flow-design流程设计器</title>
     <style>
@@ -233,7 +233,7 @@
       var _hmt = _hmt || [];
       (function () {
         var hm = document.createElement('script');
-        hm.src = 'https://hm.baidu.com/hm.js?ad5a868b3c6608e3580f2f7e4d76d66d';
+        hm.src = 'https://hm.baidu.com/hm.js?52dc0243358563c7227d8f3074173ab9';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(hm, s);
       })();
